# botmirror

./: .env_template  .gitignore  README.md  app.py  botmirror.py  data.py  data2parquet.py  detector.py  notebook.py  pyproject.toml  viz.py
tests/: test_app.py  test_data.py  test_embedding_simple.py
