[project]
name = "botmirror"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.3.2",
    "faicons>=0.2.2",
    "marimo>=0.14.16",
    "numpy>=2.3.2",
    "plotly>=6.2.0",
    "polars>=1.32.2",
    "python-dotenv>=1.1.1",
    "rapidfuzz>=3.13.0",
    "rich>=14.1.0",
    "shiny>=1.4.0",
    "shinywidgets>=0.7.0",
]
